Fix alignment

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -8,7 +8,7 @@
 input[type=text] {
     border: 0px solid rgb(51, 51, 51);
     border-radius: 10px;
-    /* min-width: 334px; */
+    min-width: 334px; 
     height: 33px;
     line-height: 32px;
     font-weight: 400;
